@@ -138,6 +138,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 509258  FreeBSD: add jail_attach_jd and jail_remove_jd syscall wrappers
 509517  s390x: Even/odd lane confusion in various vector insns
 509590  Run the LTP tests with LTP_QUIET
+509567  unhandled amd64-linux syscall: 443 (quotactl_fd)
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
